2012-06-10 17:49  paddockd

	* [r345] ChangeLog, sources/libogg-1.1.4.tar.bz2,
	  sources/libvorbis-1.3.2.tar.bz2, sources/portaudio-r1826.tar.gz,
	  sources/tremor-r17503.tar.bz2, src/squeezeslave/squeezeslave.c:
	  Deleted obsolete support library sources.
	  Increased revision to 345.

2012-06-10 17:42  paddockd

	* [r344] ChangeLog, contrib/makefile.sol-gcc-sparc-display,
	  patches/bitrate-limit-wma.patch: Added generic solaris makefile
	  for gcc to contrib.
	  Added server patch to enable bitrate limiting for wma.

2012-06-10 12:44  paddockd

	* [r343] ChangeLog, makefile.sol10-intel-display,
	  makefile.sol10-sparc64-display, makefile.sol9-sparc-display,
	  src/squeezeslave/squeezeslave.c: Removed unused sun math library
	  from solaris makefile link library.
	  Increases revision to 343.

2012-06-10 12:39  paddockd

	* [r342] ChangeLog, src/slimproto/slimproto.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c:
	  Replaced __SUNPRO_C definitions with 'sun' to identify building
	  on solaris.
	  Remaining __SUNPRO_C references are Sun Studio specific compile
	  requirements.
	  Increased revision to 342.

2012-06-04 14:57  paddockd

	* [r341] ChangeLog, TODO, src/slimproto/slimproto.c,
	  src/squeezeslave/squeezeslave.c: Fixed unclosed comment from the
	  removal of all C++ // style comments.
	  Increased revision to 341.

2012-06-04 14:47  paddockd

	* [r340] ChangeLog, lib/libmad/s10intel/include/stdbool.h,
	  lib/libmad/s10sparc/include/stdbool.h,
	  lib/libmad/s9sparc/include/stdbool.h,
	  src/squeezeslave/squeezeslave.c: Define _Bool in stdbool.h if not
	  declared.
	  Increased revision to 340.

2012-06-04 14:43  paddockd

	* [r339] ChangeLog, src/squeezeslave/squeezeslave.c: Moved
	  variables to top of main() for gcc 2.95.3 support.
	  Increased revision to 339.

2012-06-04 14:16  paddockd

	* [r338] lib/portaudio-empeg/pa_common/pa_convert.c,
	  lib/portaudio-empeg/pa_unix_oss/pa_unix.h,
	  lib/portaudio/pa_common/pa_convert.c,